--- a/Clase 4.4/index.html
+++ b/Clase 4.4/index.html
@@ -30,6 +30,12 @@
 
     </div>
 
+    <input id="nombre" type="text">
+
+    <ul id="personas">
+
+    </ul>
+
     <script src="./main.js"></script>
 </body>
 </html>
